--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,12 @@
+:root {
+    --teal: #2ec1ac;
+    --teal_hover: #279e8c;
+}
+
 *{
     font-family: "Poppins", sans-serif;
 }
-*h-font {
+.h-font {
     font-family: "Marienda", cursive;
 }
         
@@ -11,16 +16,18 @@ input::-webkit-inner-spin-button {
 -webkit-appearance: none;
 margin: 0;
 }
-/* Firefox */
-input[type=number] {
-    -moz-appearance: textfield;
-}
         
 .custom-bg {
-    background-color: #2ec1ac;
-    border: 1px solid #2ec1ac;
+    background-color: var(--teal);
+    border: 1px solid var(--teal);
 }
 .custom-bg:hover {
-    background-color: #2ec1ac;
-    border-color: #2ec1ac;
+    background-color: var(--teal_hover);
+    border-color: var(--teal_hover);
+}
+
+.h-line {
+    width: 150px;
+    margin: 0 auto;
+    height: 1.7px;
 }
