--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -31,3 +31,9 @@ margin: 0;
     margin: 0 auto;
     height: 1.7px;
 }
+
+.custom-alert {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+}
